projects/examples/source/02.35.cpp
////////////////////////////////////////////////////////////////////

// chapter : Basics of Programming

////////////////////////////////////////////////////////////////////

// section : Lvalue References

////////////////////////////////////////////////////////////////////

// content : Reference Semantics
//
// content : Wrapper std::reference_wrapper

////////////////////////////////////////////////////////////////////

#include <cassert>
#include <functional>
#include <vector>

////////////////////////////////////////////////////////////////////

int main()
{
	auto x = 1;

//  ----------------------------------------------------------------

//	std::vector < int & > vector_1 = { x }; // error

//  ----------------------------------------------------------------

	std::vector < std::reference_wrapper < int > > vector_2 = { x };

//  ----------------------------------------------------------------

	++vector_2.back().get();

//  ----------------------------------------------------------------
	
	assert(x == 2);
}

////////////////////////////////////////////////////////////////////